# jix

./: README.md  micro.c
ccode/: args.c  bit.c  const.c  line.c  micro.c  setjmp.c  sizeof.c
cmake/: README  note.txt
cmake/1/: CMakeLists.txt
cmake/2/: CMakeLists.txt
cmake/2/src/: use_add.c
cmake/20170929/: CMakeLists.txt  a
cmake/makefile/: func.mk
cppcode/201710_12/: class_array.cpp  class_static_member.cpp  float_double.cpp  hello.cpp  new_delete.cpp  readme.txt  reference.cpp  size_of_class.cpp  static.cpp  ya_yuan.cpp
cppcode/cpp execise/day01/: bank.cpp  bool.cpp  enum.cpp  hello.c  hello.cpp  overload.cpp  overmatch.cpp  struct.cpp  union.cpp
cppcode/cpp execise/day02/: defargs.cpp  inline.cpp  inline.s  main.c  main.cpp  name.c  name.cpp  new.cpp  overpfun.cpp  ref.cpp  refargs.cpp  refptr.cpp  retref.cpp
cppcode/cpp execise/day03/: .swp  arr.cpp  cast.cpp  consorder.cpp  string.cpp  student.cpp
cppcode/cpp execise/day04/: ask.cpp  clock.cpp  cons.cpp  const.cpp  cpcons.cpp  cpoptm.cpp  defcons.cpp  initlist.cpp  initorder.cpp  mustinit.cpp  nocp.cpp  overconst.cpp  this.cpp
cppcode/cpp execise/day05/: abc.cpp  account.cpp  array.cpp  array2.cpp  calc.cpp  complex1.cpp  decorder.cpp  file.cpp  memptr.cpp  singleton.cpp  test.txt
cppcode/cpp execise/day06/: auto.cpp  (+16 more)
leetcode/: README.md
python/: decorate.py  property01.py  property02.py
shellcode/: README.md  apt_error.sh  args.sh  case.sh  centos_change_repo.sh  git_color.sh  mannual.sh  read.sh  yum_other_process_user_error.sh
useful/: .gitconfig  VS2012-Dark.xml  sl.sh  smb.conf
(+58 files in other folders)
